@@ -1,6 +1,12 @@
 Pending changes in the mainline
 ===============================
 
+General
+-------
+
+* Improved decoding of US Images with Implicit VR.
+
+
 
 Version 1.10.1 (2022-03-23)
 ===========================
